--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,7 @@
     "    if len(data_sorted) % 2 == 0:\n",
     "        median = (data_sorted[len(data_sorted)/2] + data_sorted[len(data_sorted)/2+1])/float(len(data_sorted))\n",
     "    else:\n",
-    "        median = data_sorted[len(data_sorted)/2]\n",
+    "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
