Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,7 @@
     "    \n",
     "    # Check for even/odd and perform calculations accordingly - use if-else\n",
     "    if len(data_sorted) % 2 == 0:\n",
-    "        median = (data_sorted[len(data_sorted)/2] + data_sorted[len(data_sorted)/2+1])/float(len(data_sorted))\n",
+    "        median = (data_sorted[int(len(data_sorted)/2)] + data_sorted[len(data_sorted)/2+1])/float(len(data_sorted))\n",
     "    else:\n",
     "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
