--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
     "    if len(data_sorted) % 2 == 0:\n",
     "        median = (data_sorted[int(len(data_sorted)/2)] + data_sorted[int(len(data_sorted)/2)+1])/float(len(data_sorted))\n",
     "    else:\n",
-    "        median = data_sorted[int(len(data_sorted)/2)+1]\n",
+    "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
