--- a/index.ipynb
+++ b/index.ipynb
@@ -507,14 +507,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
+      "3\n",
       "1.75\n"
      ]
     }
@@ -528,7 +528,7 @@
     "    if len(data_sorted) % 2 == 0:\n",
     "        median = (data_sorted[int(len(data_sorted)/2)] + data_sorted[int(len(data_sorted)/2)+1])/float(len(data_sorted))\n",
     "    else:\n",
-    "        median = data_sorted[int(len(data_sorted)/2)-2]\n",
+    "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
     "\n",
     "test1 = [5, 4, 1, 3, 2]\n",
