--- a/index.ipynb
+++ b/index.ipynb
@@ -526,7 +526,7 @@
     "    \n",
     "    # Check for even/odd and perform calculations accordingly - use if-else\n",
     "    if len(data_sorted) % 2 == 0:\n",
-    "        median = (data_sorted[int(len(data_sorted)/2)-1] + data_sorted[int(len(data_sorted)/2)])/float(len(data_sorted))\n",
+    "        median = (data_sorted[int(len(data_sorted)/2)-1] + data_sorted[int(len(data_sorted)/2)])/)\n",
     "    else:\n",
     "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
