--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "1.25\n"
+      "3.5\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
     "    \n",
     "    # Check for even/odd and perform calculations accordingly - use if-else\n",
     "    if len(data_sorted) % 2 == 0:\n",
-    "        median = (data_sorted[int(len(data_sorted)/2)-1] + data_sorted[int(len(data_sorted)/2)])/)\n",
+    "        median = (data_sorted[int(len(data_sorted)/2)] + data_sorted[int(len(data_sorted)/2)+1])/2.0\n",
     "    else:\n",
     "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
