--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
      "output_type": "stream",
      "text": [
       "3\n",
-      "3.5\n"
+      "2.5\n"
      ]
     }
    ],
@@ -526,7 +526,7 @@
     "    \n",
     "    # Check for even/odd and perform calculations accordingly - use if-else\n",
     "    if len(data_sorted) % 2 == 0:\n",
-    "        median = (data_sorted[int(len(data_sorted)/2)] + data_sorted[int(len(data_sorted)/2)+1])/2.0\n",
+    "        median = (data_sorted[int(len(data_sorted)/2)-1] + data_sorted[int(len(data_sorted)/2)])/2.0\n",
     "    else:\n",
     "        median = data_sorted[int(len(data_sorted)/2)]\n",
     "    return median\n",
@@ -547,9 +547,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'height' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-5a4c33119d04>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_median\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# 67\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'height' is not defined"
+     ]
+    }
+   ],
    "source": [
     "get_median(height)\n",
     "# 67"
