--- a/index.ipynb
+++ b/index.ipynb
@@ -597,7 +597,8 @@
     "    # For all elements in the list:\n",
     "    # If an element is not in the dictionary, add it with value 1\n",
     "    # If an element is already in the dictionary, +1 the value\n",
-    "    for \n",
+    "    for item in data:\n",
+    "        if item in fre\n",
     "    \n",
     "    # Create a list for mode values\n",
     "    modes = []\n",
