--- a/index.ipynb
+++ b/index.ipynb
@@ -598,7 +598,8 @@
     "    # If an element is not in the dictionary, add it with value 1\n",
     "    # If an element is already in the dictionary, +1 the value\n",
     "    for item in data:\n",
-    "        if item in fre\n",
+    "        if item in frequency_dict:\n",
+    "            frequency_dict[item] += 1\n",
     "    \n",
     "    # Create a list for mode values\n",
     "    modes = []\n",
