Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -600,6 +600,8 @@
     "    for item in data:\n",
     "        if item in frequency_dict:\n",
     "            frequency_dict[item] += 1\n",
+    "        else:\n",
+    "            frequency_dict[item] = 1\n",
     "    \n",
     "    # Create a list for mode values\n",
     "    modes = []\n",
