--- a/index.ipynb
+++ b/index.ipynb
@@ -607,6 +607,7 @@
     "    modes = []\n",
     "    \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
+    "    max_in_list = 0\n",
     "    for item in frequency_dict:\n",
     "\n",
     "    # Return the mode list \n",
