Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,7 @@
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
     "    max_in_list = 0\n",
     "    for item in frequency_dict:\n",
-    "        if item\n",
+    "        if item[1] > \n",
     "\n",
     "    # Return the mode list \n",
     "    return modes\n",
