Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,8 @@
     "        if item[1] > max_in_list:\n",
     "            max_in_list = item[1]\n",
     "    \n",
-    "    for \n",
+    "    for item in frequency_dict:\n",
+    "        \n",
     "\n",
     "    # Return the mode list \n",
     "    return modes\n",
