Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -613,7 +613,8 @@
     "            max_in_list = item[0]\n",
     "    \n",
     "    for item in frequency_dict:\n",
-    "        if item[0] == max_li\n",
+    "        if item[0] == max_in_list:\n",
+    "            modes.append()\n",
     "\n",
     "    # Return the mode list \n",
     "    return modes\n",
