--- a/index.ipynb
+++ b/index.ipynb
@@ -628,12 +628,11 @@
     "    \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
     "    max_in_list = 0\n",
-    "    for item in frequency_dict:\n",
-    "        print(item)\n",
+    "    for item in frequency_dict.items():\n",
     "        if item[1] > max_in_list:\n",
     "            max_in_list = item[0]\n",
     "    \n",
-    "    for item in frequency_dict:\n",
+    "    for item in frequency_dict.it:\n",
     "        if item[0] == max_in_list:\n",
     "            modes.append(item[0])\n",
     "\n",
