--- a/index.ipynb
+++ b/index.ipynb
@@ -691,9 +691,10 @@
     "def get_variance(sample):\n",
     "\n",
     "    # First, calculate the sample mean using get_mean()\n",
-    "    sample_mean = get_mean\n",
+    "    sample_mean = get_mean(sample)\n",
     "    \n",
     "    # Now, subtract the sample mean from each point and square the result. \n",
+    "    intermediate = samp\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
     "    variance = None\n",
