Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -697,7 +697,7 @@
     "    intermediate = (sample-sample_mean)**2\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
-    "    variance = None\n",
+    "    variance = intermediate/float(len())\n",
     "    \n",
     "    return variance\n",
     "\n",
