Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -707,7 +707,7 @@
     "    sample_mean = get_mean(sample)\n",
     "    \n",
     "    # Now, subtract the sample mean from each point and square the result. \n",
-    "    intermediate = (sample-sample_mean)**2\n",
+    "    intermediate = [(sample_te-sample_mean)**2\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
     "    variance = intermediate/float(len(sample))\n",
