--- a/index.ipynb
+++ b/index.ipynb
@@ -710,7 +710,7 @@
     "    intermediate = [(sample_item-sample_mean)**2 for sample_item in sample]\n",
     "    \n",
     "    # Divide the total by the number of items in the sample to calculate variance \n",
-    "    variance = intermediate/float(len(sample))\n",
+    "    variance = [intermediate/float(len(sample))\n",
     "    \n",
     "    return variance\n",
     "\n",
