--- a/index.ipynb
+++ b/index.ipynb
@@ -784,7 +784,7 @@
     "\n",
     "def get_stddev(list):\n",
     "\n",
-    "    mean = None\n",
+    "    mean = get_mean(list)\n",
     "    \n",
     "    stddev = None\n",
     "    \n",
