Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -782,11 +782,11 @@
    "source": [
     "from math import sqrt\n",
     "\n",
-    "def get_stddev(list):\n",
+    "def get_stddev(list_):\n",
     "\n",
-    "    mean = get_mean(list)\n",
+    "    mean = get_mean(list_)\n",
     "    \n",
-    "    stddev = None\n",
+    "    stddev = get_var\n",
     "    \n",
     "    return stddev\n",
     "\n",
