Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -786,7 +786,7 @@
     "\n",
     "    mean = get_mean(list_)\n",
     "    \n",
-    "    stddev = get_var\n",
+    "    stddev = get_variance(list_)/\n",
     "    \n",
     "    return stddev\n",
     "\n",
