Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -776,9 +776,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "76.71085690217954\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "\n",
@@ -786,7 +794,7 @@
     "\n",
     "    mean = get_mean(list_)\n",
     "    \n",
-    "    stddev = get_variance(list_)/\n",
+    "    stddev = sqrt(get_variance(list_))\n",
     "    \n",
     "    return stddev\n",
     "\n",
